Added ConstantPredictor class for simple tree outputs

--- a/libraries/predictors/CMakeLists.txt
+++ b/libraries/predictors/CMakeLists.txt
@@ -12,11 +12,13 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/DecisionTreePredictor.cpp
+set (SRC src/ConstantPredictor.cpp
+         src/DecisionTreePredictor.cpp
          src/LinearPredictor.cpp
          src/SingleInputThresholdRule.cpp)
 
-set (INCLUDE include/DecisionTreePredictor.h
+set (INCLUDE include/ConstantPredictor.h
+             include/DecisionTreePredictor.h
              include/EnsemblePredictor.h
              include/LinearPredictor.h
              include/SingleInputThresholdRule.h
