Created test project for the compiler

--- a/tools/utilities/compileNew/CMakeLists.txt
+++ b/tools/utilities/compileNew/CMakeLists.txt
@@ -58,6 +58,7 @@ include_directories(${CMAKE_SOURCE_DIR}/libraries/layers/include)
 include_directories(${CMAKE_SOURCE_DIR}/libraries/linear/include)
 include_directories(${CMAKE_SOURCE_DIR}/libraries/utilities/include)
 include_directories(${CMAKE_SOURCE_DIR}/libraries/common/include)
+include_directories(${CMAKE_SOURCE_DIR}/libraries/model/include)
 include_directories(${CMAKE_SOURCE_DIR}/libraries/compiler/include)
 include_directories(${CMAKE_SOURCE_DIR}/external/llvm/include)
 include_directories(${CMAKE_SOURCE_DIR}/external/llvm/include/llvm)
