--- a/tools/utilities/CMakeLists.txt
+++ b/tools/utilities/CMakeLists.txt
@@ -6,4 +6,5 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 
 add_subdirectory(apply)
 add_subdirectory(compile)
+add_subdirectory(compileGraph)
 add_subdirectory(print)
