Fixed CMakeLists files in tools directories to remove unnecessary include_directories directives.

--- a/tools/trainers/baggedTreeTrainer/CMakeLists.txt
+++ b/tools/trainers/baggedTreeTrainer/CMakeLists.txt
@@ -17,21 +17,11 @@ set (SRC src/main.cpp)
 
 source_group("src" FILES ${SRC})
 
-include_directories(include)
-include_directories(../../../libraries/common/include)
-include_directories(../../../libraries/dataset/include)
-include_directories(../../../libraries/layers/include)
-include_directories(../../../libraries/linear/include)
-include_directories(../../../libraries/lossFunctions/include)
-include_directories(../../../libraries/predictors/include)
-include_directories(../../../libraries/evaluators/include)
-include_directories(../../../libraries/trainers/include)
-include_directories(../../../libraries/utilities/include)
-
 # create executable in build\bin
 set (GLOBAL_BIN_DIR ${CMAKE_BINARY_DIR}/bin)
 set (EXECUTABLE_OUTPUT_PATH ${GLOBAL_BIN_DIR}) 
 add_executable(${PROJ_NAME} ${SRC} ${INCLUDE})
+target_include_directories(${PROJ_NAME} PRIVATE include)
 target_link_libraries(${PROJ_NAME} common dataset layers linear lossFunctions predictors evaluators trainers utilities)
 
 # put this project in the trainers folder in the IDE 
