--- a/tools/trainers/CMakeLists.txt
+++ b/tools/trainers/CMakeLists.txt
@@ -6,5 +6,5 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 
 add_subdirectory(baggedTreeTrainer)
 add_subdirectory(sgdTrainer)
-add_subdirectory(sortingTreeTrainer)
+add_subdirectory(forestTrainer)
 add_subdirectory(sweepingSGDTrainer)
