--- a/tools/trainers/forestTrainer/CMakeLists.txt
+++ b/tools/trainers/forestTrainer/CMakeLists.txt
@@ -5,7 +5,7 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 
 # define project
-set (PROJ_NAME sortingTreeTrainer)
+set (PROJ_NAME forestTrainer)
 PROJECT(${PROJ_NAME})
 
 #enable C++11 in GCC, etc
