--- a/interfaces/csharp/CMakeLists.txt
+++ b/interfaces/csharp/CMakeLists.txt
@@ -3,5 +3,5 @@
 #
 include (CommonInterfaces)
 
-generate_interface(csharp ${CMAKE_CURRENT_SOURCE_DIR} "" "")
+generate_interface(csharp ${CMAKE_CURRENT_SOURCE_DIR} "" "" "")
 add_dependencies(EMLL_csharp EMLL_common)
