--- a/interfaces/python/CMakeLists.txt
+++ b/interfaces/python/CMakeLists.txt
@@ -7,9 +7,9 @@ include (CommonInterfaces)
 add_definitions(-DSWIG_PYTHON_INTERPRETER_NO_DEBUG)
 
 find_package(PythonLibs REQUIRED)
-include_directories(${PYTHON_INCLUDE_PATH})
+# include_directories(${PYTHON_INCLUDE_PATH})
 
-generate_interface(python ${CMAKE_CURRENT_SOURCE_DIR} ${PYTHON_LIBRARIES} "")
+generate_interface(python ${CMAKE_CURRENT_SOURCE_DIR} ${PYTHON_LIBRARIES} "" ${PYTHON_INCLUDE_PATH})
 
 # Note: need to use /usr/bin/python on my OS X install -- TODO: autodetect where python is
 # tests
