Now we record the git revision of the EMLL directory when building

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "./buildme",
     "buildmac": "./buildme && ./copyMacLib.sh",
     "buildwin": "buildme && copyWindowsLib",
-    "buildlinux": "./buildme && ./copyLinuxLib",
+    "buildlinux": "./buildme && ./copyLinuxLib.sh",
     "preinstall": "",
     "preuninstall": "rm -rf build/*"
   },
