--- a/interfaces/python/CMakeLists.txt
+++ b/interfaces/python/CMakeLists.txt
@@ -1,6 +1,9 @@
 #
 # SWIG python interfaces
 #
+find_package(PythonLibs)
+if(${PYTHONLIBS_FOUND})
+
 include (CommonInterfaces)
 
 # Fix link problems when building in Debug mode:
@@ -18,3 +21,7 @@ generate_interface(python ${CMAKE_CURRENT_SOURCE_DIR} ${PYTHON_LIBRARIES} "")
 #         COMMAND python sgd.py ../../../examples/data/testData.txt)
 
 add_dependencies(_EMLL_python EMLL_common)
+
+else()
+  message(WARNING "Couldn't find Python libraries, python interfaces skipped.")
+endif() # PYTHONLIBS_FOUND
