Renamed MeanNone and VarianceNode

--- a/libraries/nodes/CMakeLists.txt
+++ b/libraries/nodes/CMakeLists.txt
@@ -19,10 +19,10 @@ set (INCLUDE include/AccumulatorNode.h
              include/DotProductNode.h
              include/LinearPredictorNode.h
              include/MagnitudeNode.h
-             include/MeanNode.h
+             include/MovingAverageNode.h
              include/SumNode.h
              include/UnaryOperationNode.h
-             include/VarianceNode.h)
+             include/MovingVarianceNode.h)
 
 set (SRC src/LinearPredictorNode.cpp)
 
@@ -32,10 +32,10 @@ set (TCC tcc/AccumulatorNode.tcc
          tcc/DelayNode.tcc
          tcc/DotProductNode.tcc
          tcc/MagnitudeNode.tcc
-         tcc/MeanNode.tcc
+         tcc/MovingAverageNode.tcc
          tcc/SumNode.tcc
          tcc/UnaryOperationNode.tcc
-         tcc/VarianceNode.tcc)
+         tcc/MovingVarianceNode.tcc)
 
 source_group("include" FILES ${INCLUDE})
 source_group("src" FILES ${SRC})
