Added OutputNode type

--- a/libraries/nodes/CMakeLists.txt
+++ b/libraries/nodes/CMakeLists.txt
@@ -20,6 +20,7 @@ set (INCLUDE include/AccumulatorNode.h
              include/LinearPredictorNode.h
              include/L2NormNode.h
              include/MovingAverageNode.h
+             include/OutputNode.h
              include/SumNode.h
              include/UnaryOperationNode.h
              include/MovingVarianceNode.h)
@@ -33,6 +34,7 @@ set (TCC tcc/AccumulatorNode.tcc
          tcc/DotProductNode.tcc
          tcc/L2NormNode.tcc
          tcc/MovingAverageNode.tcc
+         tcc/OutputNode.tcc
          tcc/SumNode.tcc
          tcc/UnaryOperationNode.tcc
          tcc/MovingVarianceNode.tcc)
