--- a/libraries/trainers/CMakeLists.txt
+++ b/libraries/trainers/CMakeLists.txt
@@ -19,7 +19,7 @@ set (INCLUDE include/BaggingIncrementalTrainer.h
              include/ForestTrainer.h
              include/IIncrementalTrainer.h
              include/IBlackBoxTrainer.h
-             include/MaxGainSingleInputBinarySplitter.h
+             include/SimpleForestTrainer.h
              include/MultiEpochIncrementalTrainer.h
              include/SortingTreeTrainer.h
              include/SweepingIncrementalTrainer.h
@@ -28,7 +28,7 @@ set (INCLUDE include/BaggingIncrementalTrainer.h
 set (TCC tcc/BaggingIncrementalTrainer.tcc
          tcc/EvaluatingIncrementalTrainer.tcc
          tcc/ForestTrainer.tcc
-         tcc/MaxGainSingleInputBinarySplitter.tcc
+         tcc/SimpleForestTrainer.tcc
          tcc/MultiEpochIncrementalTrainer.tcc
          tcc/SortingTreeTrainer.tcc
          tcc/SweepingIncrementalTrainer.tcc
