Added GetCompositeTypeName helper function.

--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -21,6 +21,7 @@ set (SRC src/CompressedIntegerList.cpp
          src/IntegerStack.cpp
          src/OutputStreamImpostor.cpp
          src/RandomEngines.cpp
+         src/TypeName.cpp
          src/UniqueId.cpp
          src/Variant.cpp
          src/XMLSerialization.cpp)
