Changed printing of dataset ForestTrainer uses std::partition (rather than sort) for binary splits Added tiny dataset

--- a/tools/trainers/forestTrainer/CMakeLists.txt
+++ b/tools/trainers/forestTrainer/CMakeLists.txt
@@ -33,4 +33,4 @@ set (GLOBAL_BIN_DIR ${CMAKE_BINARY_DIR}/bin)
 # tests
 add_test(NAME sgdTrainerTest
          WORKING_DIRECTORY ${GLOBAL_BIN_DIR}
-         COMMAND ${PROJ_NAME} -idf ${CMAKE_SOURCE_DIR}/examples/data/testData.txt -dd auto -omf null -v)
+         COMMAND ${PROJ_NAME} -idf ${CMAKE_SOURCE_DIR}/examples/data/tinyTestData.txt -dd auto -omf null -v)
