--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -101,9 +101,9 @@ add_executable(${TEST_NAME} ${TEST_SRC} ${TEST_INCLUDE} ${INCLUDE})
 target_include_directories(${TEST_NAME} PRIVATE test/include)
 
 if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
-target_link_libraries(utilities_test utilities dataset linear layers testing -pthread)
+target_link_libraries(utilities_test utilities dataset linear layers model nodes testing -pthread)
 else()
-target_link_libraries(utilities_test utilities dataset linear layers testing)
+target_link_libraries(utilities_test utilities dataset linear layers model nodes testing)
 endif()
 set_property(TARGET utilities_test PROPERTY FOLDER "tests")
 add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
