Templatized node processing

--- a/libraries/compiler/CMakeLists.txt
+++ b/libraries/compiler/CMakeLists.txt
@@ -52,6 +52,7 @@ set (TCC tcc/SymbolTable.tcc
 		 tcc/Variable.tcc
 		 tcc/ScalarVar.tcc
 		 tcc/DataFlow.tcc
+		 tcc/DataFlowBuilder.tcc
 		 tcc/IRCompiler.tcc
 )
 
