Moved WeightLabel into Example.h and Example.cpp

--- a/libraries/dataset/CMakeLists.txt
+++ b/libraries/dataset/CMakeLists.txt
@@ -18,7 +18,7 @@ set (SRC src/DenseDataVector.cpp
          src/SparseBinaryDataVector.cpp
          src/SparseDataVector.cpp
          src/SparseEntryParser.cpp
-         src/WeightLabel.cpp
+         src/Example.cpp
          src/ZeroDataVector.cpp)
 
 set (INCLUDE include/DataVectorBuilder.h
@@ -35,7 +35,6 @@ set (INCLUDE include/DataVectorBuilder.h
              include/SparseEntryParser.h
              include/SupervisedExample.h
              include/SupervisedExampleBuilder.h
-             include/WeightLabel.h
              include/ZeroDataVector.h)
 
 set (TCC tcc/DataVectorBuilder.tcc
