--- a/libraries/model/CMakeLists.txt
+++ b/libraries/model/CMakeLists.txt
@@ -16,7 +16,7 @@ set (SRC src/ModelGraph.cpp
          src/ModelTransformer.cpp
          src/Node.cpp
          src/OutputPort.cpp
-         src/OutputPortElementList.cpp
+         src/OutputPortElements.cpp
          src/Port.cpp
 )
 
@@ -28,7 +28,7 @@ set (INCLUDE include/ExtremalValueNode.h
              include/Node.h
              include/OutputNode.h
              include/OutputPort.h
-             include/OutputPortElementList.h
+             include/OutputPortElements.h
              include/Port.h
              include/ValueSelectorNode.h
 )
@@ -40,7 +40,7 @@ set (TCC tcc/ExtremalValueNode.tcc
          tcc/ModelTransformer.tcc
          tcc/OutputNode.tcc
          tcc/OutputPort.tcc
-         tcc/OutputPortElementList.tcc
+         tcc/OutputPortElements.tcc
          tcc/ValueSelectorNode.tcc
 )
 
