changes for adding nan dependency and build for node, test script

--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "type": "git",
     "url": "https://intelligentdevices.visualstudio.com/_git/UX"
   },
-  "gypfile": true
+  "gypfile": true,
+  "dependencies": {
+    "nan": "^2.4.0"
+  }
 }
