--- a/libraries/nodes/CMakeLists.txt
+++ b/libraries/nodes/CMakeLists.txt
@@ -17,13 +17,14 @@ set (INCLUDE include/AccumulatorNode.h
              include/ConstantNode.h
              include/DelayNode.h
              include/DotProductNode.h
+             include/ElementSelectorNode.h
              include/LinearPredictorNode.h
              include/L2NormNode.h
              include/MovingAverageNode.h
+             include/MovingVarianceNode.h
              include/SimpleForestNode.h
              include/SumNode.h
-             include/UnaryOperationNode.h
-             include/MovingVarianceNode.h)
+             include/UnaryOperationNode.h)
 
 set (SRC src/LinearPredictorNode.cpp
          src/SimpleForestNode.cpp)
@@ -33,11 +34,12 @@ set (TCC tcc/AccumulatorNode.tcc
          tcc/ConstantNode.tcc
          tcc/DelayNode.tcc
          tcc/DotProductNode.tcc
+         tcc/ElementSelectorNode.tcc
          tcc/L2NormNode.tcc
          tcc/MovingAverageNode.tcc
+         tcc/MovingVarianceNode.tcc
          tcc/SumNode.tcc
-         tcc/UnaryOperationNode.tcc
-         tcc/MovingVarianceNode.tcc)
+         tcc/UnaryOperationNode.tcc)
 
 source_group("include" FILES ${INCLUDE})
 source_group("src" FILES ${SRC})
